# zlog

./: meson.build  meson_options.txt
examples/: hello.c  level.c  meson.build  zlog.conf  zlog2.conf
src/: category.c  category.h  fmacros.h  level.c  level_list.c  meson.build  rule.c  rule.h  version.h  version.h.bak  zlog.c  zlog.h
test/: cpconf.sh  meson.build
